Update python language set index.html
add more sections in python

--- a/index.html
+++ b/index.html
@@ -52,15 +52,16 @@
         </div>
     </section>
 
-    <!-- Language-Specific Sections (Python, SQL, Java) -->
     <section id="python" class="language-section">
-        <h2>Python</h2>
-        <p>Learn Python fundamentals, data structures, and more.</p>
-        <ul>
-            <li><a href="python/introduction.html">Introduction to Python</a></li>
-            <li><a href="python/data-structures.html">Data Structures</a></li>
-            <li><a href="python/control-flow.html">Control Flow</a></li>
-            </ul>
+      <h2>Python</h2>
+      <p>Learn Python fundamentals, data structures, and more.</p>
+      <ul>
+          <li><a href="python/basic-concepts.html" class="light-bold">Basic Concepts</a></li>
+          <li><a href="python/intermediate-concepts.html" class="light-bold">Intermediate Concepts</a></li>
+          <li><a href="python/advanced-concepts.html" class="light-bold">Advanced Concepts</a></li>
+          <li><a href="python/coding-questions.html" class="light-bold">Coding Questions</a></li>
+          <li><a href="python/exercises-projects.html" class="light-bold">Exercises and Projects</a></li>
+      </ul>
     </section>
 
     <section id="sql" class="language-section">
