--- a/index.html
+++ b/index.html
@@ -1,125 +1,175 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hacktrix - Your Tech Resource Hub</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">Hacktrix</div>
-            <ul class="nav-links" id="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#python">Python</a></li>
-                <li><a href="#sql">SQL</a></li>
-                <li><a href="#java">Java</a></li>
-                <li><a href="#gcp">GCP</a></li>
-                <li><a href="#articles">Articles</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-            <div class="burger" onclick="toggleMenu()">&#9776;</div>
+
+    <!-- Header Section -->
+    <header class="bg-dark text-white fixed-top">
+        <nav class="container navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="#">Hacktrix</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#python">Python</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#sql">SQL</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#java">Java</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#gcp">GCP</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#articles">Articles</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
 
-    <section class="hero">
-        <h1>Welcome to Hacktrix</h1>
-        <p>Your gateway to mastering tech skills, cloud services, and coding solutions.</p>
-        <a href="#services" class="btn">Get Started</a>
-    </section>
-
-    <section id="about" class="about">
-        <h2>About Us</h2>
-        <p>At LuckyBytes, we simplify complex tech and help you navigate through the world of cloud services, coding tutorials, and problem-solving techniques.</p>
-    </section>
-
-    <section id="services" class="services">
-        <h2>Services</h2>
-        <div class="service-item">
-            <h3>Coding Tutorials (Python, SQL, Java)</h3>
-            <p>Guides and solutions for popular coding platforms, from basic to advanced.</p>
+    <div class="hero-section">
+        <div class="overlay">
+            <h1>Welcome to Hacktrix</h1>
+            <p>Your gateway to mastering tech skills, cloud services, and coding solutions.</p>
+            <button class="btn btn-primary">Get Started</button>
         </div>
-        <div class="service-item">
-            <h3>Cloud Solutions (GCP)</h3>
-            <p>Step-by-step guides for GCP services, pipelines, and more.</p>
+    </div>
+
+    <!-- About Us Section -->
+    <section id="about" class="container py-5">
+        <div class="text-center mb-4">
+            <h2>About Us</h2>
+            <p class="lead">LuckyBytes is your go-to resource for mastering tech skills, from beginner tutorials to expert guides.</p>
         </div>
-        <div class="service-item">
-            <h3>Error Resolution</h3>
-            <p>In-depth troubleshooting articles to solve common tech issues.</p>
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <p class="text-muted">Welcome to LuckyBytes! We are dedicated to making complex technology accessible and easy to understand. Our mission is to guide you through cloud services, provide comprehensive coding tutorials, and offer effective problem-solving techniques. Whether you’re a beginner or an experienced professional, LuckyBytes is here to help you stay ahead in the digital world.</p>
+            </div>
         </div>
     </section>
+<div style="font-size: 24px; font-weight: bold; color: #333; text-align: center; margin: 20px 0; font-family: Arial, sans-serif;">
 
-    <section id="python" class="language-section">
-      <h2>Python</h2>
-      <p>Learn Python fundamentals, data structures, and more.</p>
-      <ul>
-          <li><a href="python/basic-concepts.html" class="light-bold">Basic Concepts</a></li>
-          <li><a href="python/intermediate-concepts.html" class="light-bold">Intermediate Concepts</a></li>
-          <li><a href="python/advanced-concepts.html" class="light-bold">Advanced Concepts</a></li>
-          <li><a href="python/coding-questions.html" class="light-bold">Coding Questions</a></li>
-          <li><a href="python/exercises-projects.html" class="light-bold">Exercises and Projects</a></li>
-      </ul>
-    </section>
+    Learn to Code with LuckyBytes
 
-    <section id="sql" class="language-section">
-        <h2>SQL</h2>
-        <p>Master SQL for database management.</p>
+</div>
+    
+<div class="container my-5">
+    <section id="python" class="language-section mb-5">
+        <h2 class="text-primary">Python</h2>
+        <p>Learn Python fundamentals, data structures, and more.</p>
         <ul>
-            <li><a href="sql/basics.html">SQL Basics</a></li>
-            <li><a href="sql/queries.html">Advanced Queries</a></li>
-            <li><a href="sql/database-design.html">Database Design</a></li>
+            <li><a href="python/basic-concepts.html">Basic Concepts</a></li>
+            <li><a href="python/intermediate-concepts.html">Intermediate Concepts</a></li>
+            <li><a href="python/advanced-concepts.html">Advanced Concepts</a></li>
+            <li><a href="python/coding-questions.html">Coding Questions</a></li>
+            <li><a href="python/exercises-projects.html">Exercises and Projects</a></li>
         </ul>
     </section>
 
-    <section id="java" class="language-section">
-        <h2>Java</h2>
+    <section id="sql" class="language-section mb-5">
+        <h2 class="text-primary">SQL</h2>
+        <p>Master SQL for database management.</p>
+        <ul>
+            <li><a href="sql/Basic Concepts.html">SQL Basics</a></li>
+            <li><a href="sql/Intermediate Concepts.html">SQL Intermediate</a></li>
+            <li><a href="sql/Advanced Concepts.html">SQL Advanced</a></li>
+            <li><a href="sql/queries.html">Practice Queries</a></li>
+            <li><a href="sql/Excercises.html">Exercise Questions</a></li>
+        </ul>
+    </section>
+
+    <section id="java" class="language-section mb-5">
+        <h2 class="text-primary">Java</h2>
         <p>Explore object-oriented programming with Java.</p>
         <ul>
             <li><a href="java/introduction.html">Introduction to Java</a></li>
             <li><a href="java/oop.html">Object-Oriented Programming</a></li>
             <li><a href="java/collections.html">Collections</a></li>
+            <li><a href="java/coding.html">Practice Questions</a></li>
+            <li><a href="java/exercise.html">Exercise Questions</a></li>
         </ul>
     </section>
 
-    <section id="gcp" class="language-section">
-        <h2>Google Cloud Platform (GCP)</h2>
+    <section id="gcp" class="language-section mb-5">
+        <h2 class="text-primary">Google Cloud Platform (GCP)</h2>
         <p>Learn about GCP services and cloud computing.</p>
         <ul>
             <li><a href="gcp/compute-engine.html">Compute Engine</a></li>
             <li><a href="gcp/cloud-storage.html">Cloud Storage</a></li>
             <li><a href="gcp/data-processing.html">Data Processing</a></li>
-
         </ul>
     </section>
+</div>
 
 
-    <section id="articles" class="articles">
-        <h2>Latest Articles</h2>
-        <!-- Add your articles here -->
-        <div class="article">
-            <h3>How to Build GCP Pipelines</h3>
-            <p>Explore our step-by-step guide on setting up data pipelines on Google Cloud Platform.</p>
-            <a href="#" class="read-more">Read More</a>
+    <!-- Services Section -->
+    <section id="services" class="container py-5">
+        <div class="text-center mb-4">
+            <h2>Services</h2>
+            <p class="text-muted">Coming Soon</p>
         </div>
-        <!-- Add more articles -->
+        <div class="row">
+            <div class="col-md-4 mb-4">
+                <div class="card border-0 shadow-sm">
+                    <div class="card-body text-center">
+                        <h3 class="card-title">Coding Tutorials</h3>
+                        <p class="card-text">Python, SQL, Java - Guides from basic to advanced levels.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card border-0 shadow-sm">
+                    <div class="card-body text-center">
+                        <h3 class="card-title">Cloud Solutions</h3>
+                        <p class="card-text">Step-by-step GCP guides for pipelines and cloud services.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card border-0 shadow-sm">
+                    <div class="card-body text-center">
+                        <h3 class="card-title">Machine Learning</h3>
+                        <p class="card-text">Comprehensive resources for ML and AI fundamentals.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <section id="contact" class="contact">
+    <!-- Contact Section -->
+    <section id="contact" class="container py-5 text-center">
         <h2>Contact Us</h2>
         <p>Have questions? Reach out to us for more information.</p>
-        <form>
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Your Email" required>
-            <textarea placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
+        <form class="mt-4">
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <input type="text" class="form-control" placeholder="Your Name" required>
+                </div>
+                <div class="form-group col-md-6">
+                    <input type="email" class="form-control" placeholder="Your Email" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <textarea class="form-control" rows="4" placeholder="Your Message" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary btn-lg">Send Message</button>
         </form>
     </section>
 
-    <footer>
+    <!-- Footer -->
+    <footer class="bg-dark text-white py-4 text-center">
         <p>&copy; 2024 LuckyBytes. All rights reserved.</p>
     </footer>
+
+    <!-- JavaScript and Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
