--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section id="about" class="container py-5">
         <div class="text-center mb-4">
             <h2>About Us</h2>
-            <p class="lead">LuckyBytes is your go-to resource for mastering tech skills, from beginner tutorials to expert guides.</p>
+            <p class="lead">Hacktrix is your go-to resource for mastering tech skills, from beginner tutorials to expert guides.</p>
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8">
