--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <ul>
             <li><a href="python/basic-concepts.html">Basic Concepts</a></li>
             <li><a href="python/intermediate-concepts.html">Intermediate Concepts</a></li>
-            <li><a href="python/advanced-concepts.html">Advanced Concepts</a></li>
+            <li><a href="python/advanced-concepts.html">Advanced Concepts(OOPs)</a></li>
             <li><a href="python/coding-questions.html">Coding Questions</a></li>
             <li><a href="python/exercises-projects.html">Exercises and Projects</a></li>
         </ul>
