--- a/python/coding-questions.html
+++ b/python/coding-questions.html
@@ -128,6 +128,7 @@
             transition: background-color 0.3s ease;
             white-space: pre-wrap; /* Allow line breaks */
             word-wrap: break-word; /* Break long words */
+            font-size: 16px; /* Default font size */
         }
         pre:hover {
             background-color: #3e3e3e;
@@ -170,7 +171,7 @@
                 padding: 15px;
             }
             pre {
-                font-size: 14px; /* Adjust font size for smaller screens */
+                font-size: 12px; /* Adjust font size for smaller screens */
             }
             .copy-btn {
                 padding: 3px 7px;
