--- a/python/exercises-projects.html
+++ b/python/exercises-projects.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hacktrix - Your Tech Resource Hub</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 
     <style>
@@ -35,47 +34,6 @@
         .nav-link:hover {
            color: #ffdd57;
         }
-        .toc-container {
-            background-color: #f8f9fa;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, background-color 0.3s ease;
-        }
-        .toc-container:hover {
-            transform: scale(1.02);
-            background-color: #e9ecef;
-        }
-        .toc-title {
-            color: #007bff;
-            text-align: center;
-            margin-bottom: 20px;
-            animation: fadeIn 1s ease-in-out;
-        }
-        .toc-list {
-            list-style-type: none;
-            padding-left: 0;
-        }
-        .toc-list li {
-            margin-bottom: 10px;
-        }
-        .toc-list a {
-            color: #0056b3;
-            text-decoration: none;
-            font-size: 1.1em;
-            transition: color 0.3s ease;
-        }
-        .toc-list a:hover {
-            color: #ff5733;
-        }
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
     </style>
 </head>
 
@@ -102,7 +60,7 @@
 
         <!-- Title Section -->
         <div class="title-section">
-            <h1>Coding Excercise for Python</h1>
+            <h1>Exercise Questions fro Python</h1>
         </div>
 
         <style>
@@ -149,59 +107,14 @@
             }
         });
     </script>
+
     </header>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Practice Python list operations with these 10 questions, each with test cases and hints. Perfect for beginners and intermediate learners.">
-    <title>Python List Operations Practice Questions</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
-            color: #343a40;
-        }
-        .container {
-            margin-top: 50px;
-        }
-        h1 {
-            margin-bottom: 30px;
-            text-align: center;
-            color: #007bff;
-        }
-        .question {
-            background-color: #ffffff;
-            border: 1px solid #dee2e6;
-            border-radius: 5px;
-            padding: 20px;
-            margin-bottom: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .question h2 {
-            margin-bottom: 15px;
-            color: #17a2b8;
-        }
-        .hint {
-            display: none;
-            margin-top: 10px;
-            background-color: #e9ecef;
-            padding: 10px;
-            border-radius: 5px;
-        }
-        .hint-btn {
-            margin-top: 10px;
-        }
-    </style>
-    <br>
-    <br>
-    <br>
-</head>
-<body>
+    <main>
+
     <section class="container">
+        <br>
+        <br>
+        <br>
         <h1 class="mb-4">Python List Operations Practice Questions</h1>
 
         <div class="question">
@@ -1165,6 +1078,11 @@
             });
         });
     </script>
+
+</main>
     
+
+
+
 </body>
 </html>
