--- a/python/coding-questions.html
+++ b/python/coding-questions.html
@@ -506,7 +506,7 @@
 
 
         <section id="Interger and float" class="content-section">
-            <h2>integers and Float</h2>
+            <h2>Integers and Floats</h2>
             <div class="code-block">
                 <h3>Basic Arithmetic Operations</h3>
                 <p><strong>Question:</strong> Write a Python program that takes two integers as input and performs addition, subtraction, multiplication, and division. Print the results.</p>
