--- a/index.html
+++ b/index.html
@@ -174,10 +174,12 @@
         <h2 class="text-primary">Hadoop Ecosystem</h2>
         <p>Dive into the Hadoop ecosystem and its components.</p>
         <ul>
-          <li><a href="hadoop/hdfs.html">HDFS</a></li>
-          <li><a href="hadoop/hive.html">Hive</a></li>
-          <li><a href="hadoop/spark.html">Spark</a></li>
-          <li><a href="hadoop/other-topics.html">Other Important Topics</a></li>
+          <li><a href="hadoop/hadoop.html">Introduction to Hadoop</a></li>
+          <li><a href="hadoop/core-components.html">Core Components of Hadoop</a></li>
+          <li><a href="hadoop/hive.html">Data Processing and Analysis</a></li>
+          <li><a href="hadoop/datastorage.html"> Data Storage and Management</a></li>
+          <li><a href="hadoop/workflow.html"> Workflow and Coordination</a></li>
+          <li><a href="hadoop/advanced-topics.html">Advanced Topics and Future Trends</a></li>
         </ul>
       </section>
 
