--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <ul>
           <li><a href="hadoop/hadoop.html">Introduction to Hadoop</a></li>
           <li><a href="hadoop/core-components.html">Core Components of Hadoop</a></li>
-          <li><a href="hadoop/hive.html">Data Processing and Analysis</a></li>
+          <li><a href="hadoop/data-processing.html">Data Processing and Analysis</a></li>
           <li><a href="hadoop/datastorage.html"> Data Storage and Management</a></li>
           <li><a href="hadoop/workflow.html"> Workflow and Coordination</a></li>
           <li><a href="hadoop/advanced-topics.html">Advanced Topics and Future Trends</a></li>
