--- a/data-analysis/pyspark.html
+++ b/data-analysis/pyspark.html
@@ -3,20 +3,20 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
+<link rel="stylesheet" href="style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
 <script>hljs.highlightAll();</script>
 
 <title>Hacktrix - Unlocking Data Potential</title>
 <meta name="description" content="Explore the power of PySpark for big data processing and analytics. Learn how to unlock your data's potential with Hacktrix.">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <!-- Header Bar -->
 <div class="header-bar">
 <span class="brand-name">Hacktrix</span>
 <nav class="navbar">
+    <button class="open-btn" onclick="toggleSidebar()">Menu</button>
 <a class="nav-link" href="#introduction-to-pyspark">PySpark</a>
 <a class="nav-link" href="#pyspark-sql">PySpark SQL</a>
 <a class="nav-link" href="#pyspark-streaming">PySpark Streaming</a>
@@ -24,8 +24,10 @@
 </nav>
 </div>
 <!-- Sidebar -->
-<div id="sidebar">
-<h2>PySpark Guide</h2>
+<div id="sidebar" class="navbar">
+    <button class="toggle-btn">&times;</button> <!-- X button for larger screens -->
+    console.log("sidebar toggles");
+<h2>Menu</h2>
 <a href="#introduction-to-pyspark">Introduction to PySpark</a>
 <a href="#pyspark-setup">PySpark Setup and Installation</a>
 <a href="#core-concepts">Core PySpark Concepts</a>
@@ -40,7 +42,9 @@
 <a href="#interview-preparation">PySpark Interview Preparation</a>
 <a href="#additional-resources">Additional Resources and FAQs</a>
 </div>
-<!-- Main Content -->
+
+<!-- Floating Menu Button (for larger screens when sidebar is hidden) -->
+<button class="menu-btn">&#9776;</button> <!-- Menu button for larger screens -->
 <div id="content">
 <h1 id="main-heading" class="seo-friendly-heading">Mastering PySpark for Efficient Big Data Processing and Analytics</h1>
 
@@ -2643,6 +2647,7 @@ cvModel = crossval.fit(df)</code></pre>
         </ul>
     </section>
 
+
 <section id="troubleshooting">
 <h1 class="seo-friendly-heading">Troubleshooting and Best Practices</h1>
 <p>This section covers common PySpark errors and solutions, tips for efficient coding, and essential testing techniques to help you build reliable and optimized PySpark applications.</p>
@@ -2716,7 +2721,6 @@ cvModel = crossval.fit(df)</code></pre>
 <section id="interview-preparation">
         <h1 class="seo-friendly-heading">PySpark Interview Preparation</h1>
         <p>Prepare for your next PySpark interview with this comprehensive guide, including commonly asked questions for both beginners and experienced candidates, as well as coding challenges to test your problem-solving skills.</p>
-    </section>
     
     <section id="beginner-questions">
         <h2 class="seo-friendly-heading">PySpark Interview Questions for Beginners</h2>
@@ -2793,6 +2797,7 @@ cvModel = crossval.fit(df)</code></pre>
         </ol>
         <p><strong>SEO Keywords:</strong> PySpark coding challenges, PySpark problem-solving, PySpark hands-on exercises, data manipulation in PySpark.</p>
     </section>
+</section>
 
 
 <section id="additional-resources">
@@ -2846,96 +2851,6 @@ cvModel = crossval.fit(df)</code></pre>
 </ol>
 </section>
 </div>
-
-<!-- JavaScript for Interactivity -->
-<script>
-// Smooth scroll for sidebar links
-document.querySelectorAll('#sidebar a').forEach(anchor => {
-    anchor.addEventListener('click', function (e) {
-        e.preventDefault();
-        const targetId = this.getAttribute('href');
-        const targetElement = document.querySelector(targetId);
-        if (targetElement) {
-            targetElement.scrollIntoView({ behavior: 'smooth' });
-        }
-    });
-});
-
-// Header shrink effect on scroll
-window.addEventListener('scroll', function () {
-    document.querySelector('.header-bar').classList.toggle('scrolled', window.scrollY > 50);
-});
-
-// Animation for main content sections
-const sections = document.querySelectorAll('#content section');
-sections.forEach(section => {
-    section.addEventListener('mouseenter', () => {
-        section.style.transform = 'scale(1.01)';
-        section.style.boxShadow = '0px 4px 12px rgba(0, 0, 0, 0.2)';
-    });
-    section.addEventListener('mouseleave', () => {
-        section.style.transform = 'scale(1)';
-        section.style.boxShadow = '0px 4px 12px rgba(0, 0, 0, 0.1)';
-    });
-});
-
-// Fade-in animation for main content sections on page load
-window.addEventListener('load', () => {
-    sections.forEach(section => {
-        section.style.opacity = '1';
-        section.style.transform = 'translateY(0)';
-    });
-});
-
-// Scroll-to-top button
-const scrollTopButton = document.createElement('button');
-scrollTopButton.textContent = '↑';
-scrollTopButton.style.position = 'fixed';
-scrollTopButton.style.bottom = '20px';
-scrollTopButton.style.right = '20px';
-scrollTopButton.style.padding = '10px';
-scrollTopButton.style.borderRadius = '50%';
-scrollTopButton.style.border = 'none';
-scrollTopButton.style.backgroundColor = '#4a90e2';
-scrollTopButton.style.color = '#ffffff';
-scrollTopButton.style.cursor = 'pointer';
-scrollTopButton.style.fontSize = '1.5rem';
-scrollTopButton.addEventListener('click', () => {
-    window.scrollTo({
-        top: 0,
-        behavior: 'smooth'
-    });
-});
-document.body.appendChild(scrollTopButton);
-
-// Show/hide scroll-to-top button
-window.addEventListener('scroll', () => {
-    if (window.scrollY > 500) {
-        scrollTopButton.style.display = 'block';
-    } else {
-        scrollTopButton.style.display = 'none';
-    }
-});
-
-// Copy Code Button Functionality (Improved)
-const copyButtons = document.querySelectorAll('.copy-button');
-
-copyButtons.forEach(button => {
-    button.addEventListener('click', () => {
-        const code = button.previousElementSibling.textContent.trim(); //Improved selector
-        navigator.clipboard.writeText(code)
-            .then(() => {
-                button.textContent = 'Copied!';
-                setTimeout(() => button.textContent = 'Copy Code', 1500);
-            })
-            .catch(err => {
-                console.error('Failed to copy: ', err);
-                button.textContent = 'Copy Failed!';
-            });
-    });
-});
-
-hljs.highlightAll(); //Initialize Highlight.js after the page loads
-</script>
+<script src="script.js"></script>
 </body>
 </html>
