sidebar issue somewhat rectifies

--- a/data-analysis/pyspark.html
+++ b/data-analysis/pyspark.html
@@ -24,7 +24,7 @@
     </nav>
   </header>
   <!-- Sidebar -->
-  <div id="sideMenu" class="sideMenu">
+  <div id="sideMenu" class="sideMenu" aria-label="Sidebar Navigation">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">x</a>
     <nav class="sidebar-nav">
       <ul class="sidebar-links">
