--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
           <li><a href="data-analysis/pandas.html">Pandas</a></li>
           <li><a href="data-analysis/numpy.html">NumPy</a></li>
           <li><a href="data-analysis/pyspark.html">PySpark</a></li>
+          <li><a href="data-analysis/scala.html">PySpark</a></li>
         </ul>
       </section>
 
