--- a/index.html
+++ b/index.html
@@ -161,11 +161,9 @@
         <p>Master SQL for database management.</p>
         <ul>
           <li><a href="sql/Basic Concepts.html">SQL Basics: Getting Started with SQL</a></li>
-          <li><a href="sql/database.html">Understanding SQL Language</a></li>
           <li><a href="sql/Intermediate Concepts.html">SQL Intermediate: Enhancing Your SQL Skills</a></li>
           <li><a href="sql/Advanced Concepts.html">SQL Advanced: Mastering Complex SQL Concept</a></li>
-          <li><a href="sql/queries.html">Practice SQL Queries: Real-World Examples
-          </a></li>
+          <li><a href="sql/queries.html">Practice SQL Queries: Real-World Examples</a></li>
           <li><a href="sql/Excercises.html">SQL Exercise Questions: Test Your Knowledge</a></li>
         </ul>
       </section>
@@ -190,7 +188,7 @@
           <li><a href="data-analysis/pandas.html">Pandas</a></li>
           <li><a href="data-analysis/numpy.html">NumPy</a></li>
           <li><a href="data-analysis/pyspark.html">PySpark</a></li>
-          <li><a href="data-analysis/scala.html">PySpark</a></li>
+          <li><a href="data-analysis/scala.html">Scala</a></li>
         </ul>
       </section>
 
@@ -200,8 +198,11 @@
         <ul>
           <li><a href="gcp/compute-engine.html">Compute Engine</a></li>
           <li><a href="gcp/cloud-storage.html">Cloud Storage</a></li>
-          <li><a href="gcp/data-processing.html">Data Processing</a></li>
           <li><a href="gcp/bigquery.html">BigQuery</a></li>
+          <li><a href="gcp/dataflow.html">Dataflow</a></li>
+          <li><a href="gcp/cloudrun.html">Cloudrun</a></li>
+          <li><a href="gcp/cloud-sql.html">Cloud SQL</a></li>
+
           <li>
             <a href="gcp/other-services.html">Other Important Services</a>
           </li>
